Verilerin redis e gitmeden önce uğrayacağı yerel bir "cache" eklendi. - Artık provider sınıfları da bu cache e erişerek verileri Coordinator e bildiriyor. - Bu sayede "Bu veri ilk defa mı geldi? Yoksa ikinci defa mı?" sorularını yerel cache ile çözdük. - Ayrıca uygulamamızdaki "RateStatus" objesi de anlam kazandı. - Provider sınıflarına yeni "setCache" metodu eklendi - Kod iyileştirmeleri, hata yönetimi, loglamalar geliştirildi.